# exchange_calendars_extensions

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  test.py  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-drafter-config.yml
.github/workflows/: ci.yml  draft-release.yml  numpy.yml  publish-rc.yml  publish.yml
docs/: _index.md  additional_calendars.md  advanced.md  basic_usage.md  calendar_modifications.md  changes.md  changesets.md  collections.md  consolidated_calendars.md  datetime.md  exchanges.md  features.md  index.md  metadata.md  properties.md  tags.md
exchange_calendars_extensions/: __init__.py  changeset.py  holiday.py  holiday_calendar.py  observance.py  offset.py  util.py
exchange_calendars_extensions/core/: __init__.py  holiday.py  holiday_calendar.py  offset.py
exchange_calendars_extras/: __init__.py  calendar_utils.py  extended_exchange_calendar.py  holiday.py  holiday_calendar.py  observance.py  offset.py  special_days.py  test.py  util.py
src/exchange_calendars_extensions/: __init__.py  changes.py  datetime.py  extension.py  holiday.py  holiday_calendar.py  offset.py  patch.py  state.py  util.py
src/exchange_calendars_extensions/core/: __init__.py  changes.py  holiday.py  holiday_calendar.py  offset.py  util.py
support/: check.py
tests/: conftest.py  synthetic_calendar.py  test_api.py  test_calendar.py  test_changes.py  test_changeset.py  test_holiday.py  test_holiday_calendar.py  test_integration.py  test_observance.py  test_offset.py  test_special_days.py  test_util.py  util.py
