[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "exchange-calendars-extensions"
version = "0"
description = "Extensions of the exchange-calendars package"
license = "Apache-2.0"
authors = ["Jens Keiner <jens.keiner@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jenskeiner/exchange_calendars_extensions/"
repository = "https://github.com/jenskeiner/exchange_calendars_extensions/"
documentation = "https://github.com/jenskeiner/exchange_calendars_extensions/tree/main/docs/"
keywords = ["exchange", "calendar", "trading", "holidays"]
classifiers = [
	"Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "exchange_calendars_extensions"}]

[tool.poetry.dependencies]
python = "~=3.8"
exchange-calendars-extensions-api = "==0.1.1"
exchange-calendars = ">=4.0.1,<5"
typing-extensions = ">=4.0,<5"
pydantic = ">=2.0,<3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<7.5.0"
pytest-cov = "~=4.1.0"
pre-commit = ">=3.3.3,<3.6.0"

[tool.pytest.ini_options]
addopts = "--cov=exchange_calendars_extensions --cov-report=term-missing"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
