[build-system]
requires = ["hatchling", "hatch-env-plus>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "exchange-calendars-extensions"
dynamic = ["version"]
description = "Extensions of the exchange-calendars package"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jens Keiner", email = "jens.keiner@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["exchange", "calendar", "trading", "holidays"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "exchange-calendars-extensions-api>=0.5.0,<1",
    "exchange-calendars>=4.0.1,<5",
    "typing-extensions >=4,<5",
    "pydantic >=2,<3; python_version<'3.13'",
    "pydantic >=2.8.0,<3; python_version>='3.13' and python_version<'3.14'",
    "pydantic >=2.12.0,<3; python_version>='3.14'",
]

[project.urls]
homepage = "https://github.com/jenskeiner/exchange_calendars_extensions/"
repository = "https://github.com/jenskeiner/exchange_calendars_extensions/"
documentation = "https://github.com/jenskeiner/exchange_calendars_extensions/tree/main/docs/"
issues = "https://github.com/jenskeiner/exchange_calendars_extensions/issues"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-mock>=3,<4",
    "pytest-cov>=7,<8",
]

[tool.hatch.version]
source = "env-plus"
variable = "PACKAGE_VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "src/exchange_calendars_extensions/**",
    "tests/**",
]
exclude = [
    ".github",
    ".pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/exchange_calendars_extensions"]

[tool.pytest.ini_options]
addopts = "--cov=src/exchange_calendars_extensions --cov-report=term-missing"
testpaths = ["tests"]
